Fix deployment issues and add comprehensive deployment guides
- Fix static file serving path in production
- Add Dockerfile.production with multi-stage build optimization
- Add platform-specific configs (Railway, Render, Fly.io)
- Fix analytics script loading to handle missing env vars
- Add .env.production with proper defaults
- Add startup script with diagnostics
- Add comprehensive DEPLOYMENT.md guide
- Add detailed TROUBLESHOOTING.md guide
- Add Procfile for Heroku-compatible platforms

--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,16 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-      defer
-      src="%VITE_ANALYTICS_ENDPOINT%/umami"
-      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"
-    ></script>
+    <!-- Analytics script - only loaded if configured -->
+    <script>
+      if ('%VITE_ANALYTICS_ENDPOINT%' && '%VITE_ANALYTICS_WEBSITE_ID%' && 
+          '%VITE_ANALYTICS_ENDPOINT%' !== '' && '%VITE_ANALYTICS_WEBSITE_ID%' !== '') {
+        var script = document.createElement('script');
+        script.defer = true;
+        script.src = '%VITE_ANALYTICS_ENDPOINT%/umami';
+        script.setAttribute('data-website-id', '%VITE_ANALYTICS_WEBSITE_ID%');
+        document.body.appendChild(script);
+      }
+    </script>
   </body>
 </html>
