--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
-    <link rel="icon" type="image/png" href="%VITE_APP_LOGO%" />
-    <link rel="apple-touch-icon" href="%VITE_APP_LOGO%" />
-    <title>%VITE_APP_TITLE%</title>
+    <link rel="icon" type="image/png" href="https://placehold.co/128x128/E1E7EF/1F2937?text=🏒" />
+    <link rel="apple-touch-icon" href="https://placehold.co/128x128/E1E7EF/1F2937?text=🏒" />
+    <title>Hockey Development Tracker</title>
   </head>
 
   <body>
